# wsjcpp-employees

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  clang_format.sh  wsjcpp.yml
scripts.wsjcpp/: generate.WsjcppEmploy.wsjcpp-script
src/: employ_my_impl.cpp  employ_my_impl.h  main.cpp  my_impl.h  wsjcpp_employees.cpp  wsjcpp_employees.h
src.wsjcpp/: CMakeLists.txt
unit-tests.wsjcpp/: CMakeLists.txt
unit-tests.wsjcpp/src/: unit_test_cicle_dependency.cpp  unit_test_cicle_dependency.h  unit_test_employ1.cpp  unit_test_employ1.h  unit_test_employ_runtime_global_cache.cpp  unit_test_employ_runtime_global_cache.h
